icondir = join_paths(get_option('datadir'), 'icons')

install_subdir('16x16', install_dir : icondir)
install_subdir('24x24', install_dir : icondir)
install_subdir('32x32', install_dir : icondir)
install_subdir('48x48', install_dir : icondir)
install_subdir('64x64', install_dir : icondir)
install_subdir('128x128', install_dir : icondir)
install_subdir('scalable', install_dir : icondir)
